--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.0.0"
 edition = "2021"
 publish = false
 
+[workspace]
+members = ["xtask"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 # Enable a small amount of optimization in debug mode
@@ -16,15 +19,19 @@ opt-level = 3
 
 [features]
 default = ["dev",]
-# dev = ["bevy/dynamic_linking", "dep:bevy_editor_pls"]
-dev = []
+dev = ["bevy/dynamic_linking", "dep:bevy_editor_pls"]
 
 [dependencies]
 bevy = "0.11.2"
-bevy_editor_pls = "0.4.0"
-serde = { version = "1.0.163", features = ["derive"] }
+# bevy_editor_pls = "0.4.0"
+serde = { version = "1.0.188", features = ["derive"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17", features = ["time"] }
+
+[dependencies.bevy_editor_pls]
+git = "https://github.com/jakobhellermann/bevy_editor_pls.git"
+branch = "main"
+optional = true
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 tracing-web = "0.1.2"
