--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ dev = ["bevy/dynamic_linking", "dep:bevy_editor_pls"]
 [dependencies]
 bevy = "0.11.2"
 bevy_mod_picking = "0.15.0"
+rand = "0.8.5"
 # bevy_editor_pls = "0.4.0"
 serde = { version = "1.0.188", features = ["derive"] }
 tracing = "0.1.37"
