--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
 name = "creativity-game"
+default-run = "creativity-game"
 version = "0.0.0"
 edition = "2021"
 publish = false
 
 [workspace]
 members = ["xtask"]
+exclude = ["surrealdb"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -23,10 +25,13 @@ dev = ["bevy/dynamic_linking", "dep:bevy_editor_pls"]
 
 [dependencies]
 bevy = "0.11.2"
+bevy_dolly = "0.0.1"
 bevy_mod_picking = "0.15.0"
 rand = "0.8.5"
 # bevy_editor_pls = "0.4.0"
 serde = { version = "1.0.188", features = ["derive"] }
+surrealdb = "1.0.0"
+tokio = { version = "1.32.0", features = ["full"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17", features = ["time"] }
 
