--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ opt-level = 3
 
 [features]
 default = ["dev",]
-dev = ["bevy/dynamic_linking", "dep:bevy_editor_pls"]
+dev = ["bevy/dynamic_linking", "dep:bevy_editor_pls", "static_assertions/nightly"]
 
 [dependencies]
 bevy = "0.11.2"
@@ -33,6 +33,7 @@ lazy_static = "1.4.0"
 rand = "0.8.5"
 # bevy_editor_pls = "0.4.0"
 serde = { version = "1.0.188", features = ["derive"] }
+static_assertions = "1.1.0"
 surrealdb = "1.0.0"
 tokio = { version = "1.32.0", features = ["full"] }
 tracing = "0.1.37"
