add: spawns blocks underneath player

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ bevy = "0.11.2"
 bevy_dolly = "0.0.1"
 bevy_mod_picking = "0.15.0"
 bevy_screen_diagnostics = "0.3.0"
+extension-traits = "1.0.1"
 inventory = "0.3.12"
 lazy_static = "1.4.0"
 rand = "0.8.5"
