--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,9 @@ bevy_screen_diagnostics = "0.3.0"
 extension-traits = "1.0.1"
 inventory = "0.3.12"
 lazy_static = "1.4.0"
+once_cell = "1.18.0"
 rand = "0.8.5"
+rand_derive = "0.5.0"
 # bevy_editor_pls = "0.4.0"
 serde = { version = "1.0.188", features = ["derive"] }
 static_assertions = "1.1.0"
