--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ publish = false
 
 [workspace]
 members = ["xtask"]
-exclude = ["surrealdb"]
+exclude = ["surrealdb", "noise-rs"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -28,9 +28,11 @@ bevy = "0.11.2"
 bevy_dolly = "0.0.1"
 bevy_mod_picking = "0.15.0"
 bevy_screen_diagnostics = "0.3.0"
+derive_more = "0.99.17"
 extension-traits = "1.0.1"
 inventory = "0.3.12"
 lazy_static = "1.4.0"
+noise = { version = "0.8.2", features = ["std"] }
 once_cell = "1.18.0"
 rand = "0.8.5"
 rand_derive = "0.5.0"
