--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ derive_more = "0.99.17"
 extension-traits = "1.0.1"
 inventory = "0.3.12"
 lazy_static = "1.4.0"
-noise = { version = "0.8.2", features = ["std"] }
+noise = { version = "0.8.2", features = ["std", "images"] }
 once_cell = "1.18.0"
 rand = "0.8.5"
 rand_derive = "0.5.0"
