--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,12 @@ opt-level = 1
 opt-level = 3
 
 [features]
-default = ["dev",]
-dev = ["bevy/dynamic_linking", "dep:bevy_editor_pls", "static_assertions/nightly"]
+default = ["dev"]
+dev = [
+	"bevy/dynamic_linking",
+	"dep:bevy_editor_pls",
+	"static_assertions/nightly",
+]
 
 [dependencies]
 bevy = "0.11.2"
@@ -39,7 +43,7 @@ rand_derive = "0.5.0"
 # bevy_editor_pls = "0.4.0"
 serde = { version = "1.0.188", features = ["derive"] }
 static_assertions = "1.1.0"
-surrealdb = "1.0.0"
+surrealdb = { version = "1.0.0", optional = true }
 tokio = { version = "1.32.0", features = ["full"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17", features = ["time"] }
