--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ rand_derive = "0.5.0"
 # bevy_editor_pls = "0.4.0"
 serde = { version = "1.0.188", features = ["derive"] }
 static_assertions = "1.1.0"
+strum = { version = "0.25.0", features = ["derive"] }
 surrealdb = { version = "1.0.0", optional = true }
 tokio = { version = "1.32.0", features = ["full"] }
 tracing = "0.1.37"
