--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ bevy = "0.11.2"
 bevy_dolly = "0.0.1"
 bevy_mod_picking = "0.15.0"
 bevy_screen_diagnostics = "0.3.0"
+contracts = "0.6.3"
 derive_more = "0.99.17"
 extension-traits = "1.0.1"
 inventory = "0.3.12"
