--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,12 +20,13 @@ opt-level = 1
 opt-level = 3
 
 [features]
-default = ["dev"]
+default = ["dev", "debugging"]
 dev = [
 	"bevy/dynamic_linking",
 	"dep:bevy_editor_pls",
 	"static_assertions/nightly",
 ]
+debugging = []
 
 [dependencies]
 bevy = "0.11.2"
