--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,19 +19,28 @@ opt-level = 1
 [profile.dev.package."*"]
 opt-level = 3
 
+# [profile.dev.package.bevy_rapier3d]
+# opt-level = 3
+
+
 [features]
 default = ["dev", "debugging"]
+## general developing
 dev = [
 	"bevy/dynamic_linking",
 	"dep:bevy_editor_pls",
 	"static_assertions/nightly",
+	# "bevy_rapier3d/simd-nightly"
+	"bevy_rapier3d/simd-stable"
 ]
+## extra debugging tools that can sometimes get in the way
 debugging = []
 
 [dependencies]
 bevy = "0.11.2"
 bevy_dolly = "0.0.1"
 bevy_mod_picking = "0.15.0"
+bevy_rapier3d = "0.22.0"
 bevy_screen_diagnostics = "0.3.0"
 contracts = "0.6.3"
 derive_more = "0.99.17"
