--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ dev = [
 	"bevy_rapier3d/simd-stable"
 ]
 ## extra debugging tools that can sometimes get in the way
-debugging = []
+debugging = ["dep:bevycheck"]
 
 [dependencies]
 bevy = "0.11.2"
@@ -42,6 +42,7 @@ bevy_dolly = "0.0.1"
 bevy_mod_picking = "0.15.0"
 bevy_rapier3d = "0.22.0"
 bevy_screen_diagnostics = "0.3.0"
+bevycheck = { version = "0.5.2", optional = true }
 contracts = "0.6.3"
 derive_more = "0.99.17"
 extension-traits = "1.0.1"
