--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ opt-level = 3
 
 
 [features]
-default = ["dev", "debugging"]
+default = ["dev", "debugging", "desktop"]
 ## general developing
 dev = [
 	"bevy/dynamic_linking",
@@ -35,6 +35,8 @@ dev = [
 ]
 ## extra debugging tools that can sometimes get in the way
 debugging = ["dep:bevycheck"]
+desktop = ["desktop_particles"]
+desktop_particles = ["dep:bevy_hanabi"]
 
 [dependencies]
 bevy = "0.11.2"
@@ -60,6 +62,12 @@ surrealdb = { version = "1.0.0", optional = true }
 tokio = { version = "1.32.0", features = ["full"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17", features = ["time"] }
+
+[dependencies.bevy_hanabi]
+version = "0.7.0"
+optional = true
+default-features = false
+features = [ "3d", ]
 
 [dependencies.bevy_editor_pls]
 git = "https://github.com/jakobhellermann/bevy_editor_pls.git"
