--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ publish = false
 
 [workspace]
 members = ["xtask"]
-exclude = ["surrealdb", "noise-rs", "bevy_editor_pls"]
+exclude = ["surrealdb", "noise-rs", "bevy_editor_pls", "bevy_hanabi"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -35,8 +35,8 @@ dev = [
 ]
 ## extra debugging tools that can sometimes get in the way
 debugging = ["dep:bevycheck"]
-desktop = ["desktop_particles"]
-desktop_particles = ["dep:bevy_hanabi"]
+desktop = ["hanabi_particles"]
+hanabi_particles = ["dep:bevy_hanabi"]
 
 [dependencies]
 bevy = "0.11.2"
