--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ bevy_rapier3d = "0.22.0"
 bevy_screen_diagnostics = "0.3.0"
 bevycheck = { version = "0.5.2", optional = true }
 contracts = "0.6.3"
+derive_builder = { version = "0.12.0", features = ["clippy"] }
 derive_more = "0.99.17"
 extension-traits = "1.0.1"
 inventory = "0.3.12"
