--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ publish = false
 
 [workspace]
 members = ["xtask"]
-exclude = ["surrealdb", "noise-rs", "bevy_editor_pls", "bevy_hanabi"]
+exclude = ["surrealdb", "noise-rs", "bevy_editor_pls", "bevy_hanabi", "bevy_transform_gizmo"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -74,6 +74,7 @@ features = [ "3d", ]
 git = "https://github.com/jakobhellermann/bevy_editor_pls.git"
 branch = "main"
 optional = true
+features = ["default_windows"]
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 tracing-web = "0.1.2"
