--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ inventory = "0.3.12"
 lazy_static = "1.4.0"
 meshtext = "0.3.0"
 noise = { version = "0.8.2", features = ["std", "images"] }
+num-integer = "0.1.45"
 once_cell = "1.18.0"
 rand = "0.8.5"
 rand_derive = "0.5.0"
