--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ hanabi_particles = ["dep:bevy_hanabi"]
 
 [dependencies]
 bevy = "0.11.2"
+# bevy-debug-text-overlay = "6.0.0"
 bevy_dolly = "0.0.1"
 bevy_mod_picking = "0.15.0"
 bevy_rapier3d = "0.22.0"
