--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ publish = false
 
 [workspace]
 members = ["xtask"]
-exclude = ["surrealdb", "noise-rs", "bevy_editor_pls", "bevy_hanabi", "bevy_transform_gizmo", "bevy_text_mesh", "ggrs", "bevy_rapier", "bevy_ggrs_rapier_example", "bevy_ggrs", "bevy_ggrs_demo"]
+exclude = ["surrealdb", "noise-rs", "bevy_editor_pls", "bevy_hanabi", "bevy_transform_gizmo", "bevy_text_mesh", "ggrs", "bevy_rapier", "bevy_ggrs_rapier_example", "bevy_ggrs", "bevy_ggrs_demo", "renet"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -42,6 +42,8 @@ hanabi_particles = ["dep:bevy_hanabi"]
 bevy = "0.11.2"
 # bevy-debug-text-overlay = "6.0.0"
 bevy_dolly = "0.0.1"
+# bevy_ggrs = "0.13.0"
+# bevy_matchbox = { version = "0.7.0", features = [] }
 bevy_mod_picking = "0.15.0"
 bevy_rapier3d = "0.22.0"
 bevy_screen_diagnostics = "0.3.0"
@@ -60,7 +62,7 @@ rand_derive = "0.5.0"
 serde = { version = "1.0.188", features = ["derive"] }
 static_assertions = "1.1.0"
 strum = { version = "0.25.0", features = ["derive"] }
-surrealdb = { version = "1.0.0", optional = true }
+surrealdb = { version = "1.0.0" }
 tokio = { version = "1.32.0", features = ["full"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17", features = ["time"] }
@@ -82,3 +84,4 @@ tracing-web = "0.1.2"
 getrandom = { version = "0.2.9", features = ["js"] }
 console_error_panic_hook = "0.1.7"
 tracing-wasm = "0.2.1"
+bevy_ggrs = { version = "0.13", features=["wasm-bindgen"]}
