--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,10 +33,14 @@ dev = [
 	# "bevy_rapier3d/simd-nightly"
 	"bevy_rapier3d/simd-stable"
 ]
+
+### feature specific items
+desktop = ["hanabi_particles"]
+server = []
+hanabi_particles = ["dep:bevy_hanabi"]
+
 ## extra debugging tools that can sometimes get in the way
 debugging = ["dep:bevycheck"]
-desktop = ["hanabi_particles"]
-hanabi_particles = ["dep:bevy_hanabi"]
 
 [dependencies]
 bevy = "0.11.2"
@@ -46,6 +50,7 @@ bevy_dolly = "0.0.1"
 # bevy_matchbox = { version = "0.7.0", features = [] }
 bevy_mod_picking = "0.15.0"
 bevy_rapier3d = "0.22.0"
+bevy_renet = "0.0.9"
 bevy_screen_diagnostics = "0.3.0"
 bevycheck = { version = "0.5.2", optional = true }
 derive_builder = { version = "0.12.0", features = ["clippy"] }
@@ -62,7 +67,7 @@ rand_derive = "0.5.0"
 serde = { version = "1.0.188", features = ["derive"] }
 static_assertions = "1.1.0"
 strum = { version = "0.25.0", features = ["derive"] }
-surrealdb = { version = "1.0.0" }
+# surrealdb = { version = "1.0.0" }
 tokio = { version = "1.32.0", features = ["full"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17", features = ["time"] }
@@ -72,6 +77,9 @@ version = "0.7.0"
 optional = true
 default-features = false
 features = [ "3d", ]
+
+# [dependencies.surrealdb]
+# version = "1.0.0"
 
 [dependencies.bevy_editor_pls]
 git = "https://github.com/jakobhellermann/bevy_editor_pls.git"
