--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,4 +1,4 @@
 [toolchain]
-# channel = "stable"
-# channel = "nightly-2023-09-28"
-channel = "nightly"
+channel = "stable"
+# channel = "nightly-2023-10-18"
+# channel = "nightly"
