--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,6 +59,7 @@ debugging = ["dep:bevycheck"]
 bevy = "0.11.2"
 # bevy-debug-text-overlay = "6.0.0"
 bevy_dolly = "0.0.1"
+bevy_egui = "0.22.0"
 # bevy_ggrs = "0.13.0"
 # bevy_matchbox = { version = "0.7.0", features = [] }
 bevy_mod_picking = "0.15.0"
@@ -94,10 +95,13 @@ features = ["3d"]
 # [dependencies.surrealdb]
 # version = "1.0.0"
 
-# [dependencies.bevy_renet]
-# git = "https://github.com/lucaspoffo/renet.git"
-# # version = "0.0.9"
-# features = ["serde"]
+[dependencies.bevy_renet]
+git = "https://github.com/lucaspoffo/renet.git"
+# version = "0.0.9"
+features = ["serde"]
+[dependencies.renet_visualizer]
+git = "https://github.com/lucaspoffo/renet.git"
+features = ["bevy"]
 
 [dependencies.bevy_editor_pls]
 git = "https://github.com/jakobhellermann/bevy_editor_pls.git"
