--- a/Cargo.toml
+++ b/Cargo.toml
@@ -96,11 +96,15 @@ features = ["3d"]
 # version = "1.0.0"
 
 [dependencies.bevy_renet]
-git = "https://github.com/lucaspoffo/renet.git"
+# git = "https://github.com/lucaspoffo/renet.git"
+git = "https://github.com/Zajozor/renet.git"
+branch = "egui-0.23"
 # version = "0.0.9"
 features = ["serde"]
 [dependencies.renet_visualizer]
-git = "https://github.com/lucaspoffo/renet.git"
+# git = "https://github.com/lucaspoffo/renet.git"
+git = "https://github.com/Zajozor/renet.git"
+branch = "egui-0.23"
 features = ["bevy"]
 
 [dependencies.bevy_editor_pls]
