todo: add server screen

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 publish = false
 
 [workspace]
-members = ["xtask"]
+members = ["xtask", "bevy_replicon"]
 exclude = [
 	"surrealdb",
 	"noise-rs",
@@ -64,6 +64,7 @@ bevy_egui = "0.22.0"
 # bevy_matchbox = { version = "0.7.0", features = [] }
 bevy_mod_picking = "0.15.0"
 bevy_rapier3d = "0.22.0"
+bevy_replicon = "0.15.1"
 # bevy_renet = "0.0.9"
 bevy_screen_diagnostics = "0.3.0"
 bevycheck = { version = "0.5.2", optional = true }
