--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,6 +78,7 @@ num-integer = "0.1.45"
 once_cell = "1.18.0"
 rand = "0.8.5"
 rand_derive = "0.5.0"
+renet = { version = "0.0.13", features = ["bevy"] }
 # bevy_editor_pls = "0.4.0"
 serde = { version = "1.0.188", features = ["derive"] }
 static_assertions = "1.1.0"
@@ -96,17 +97,23 @@ features = ["3d"]
 # [dependencies.surrealdb]
 # version = "1.0.0"
 
-[dependencies.bevy_renet]
-# git = "https://github.com/lucaspoffo/renet.git"
-git = "https://github.com/Zajozor/renet.git"
-branch = "egui-0.23"
-# version = "0.0.9"
-features = ["serde"]
-[dependencies.renet_visualizer]
-# git = "https://github.com/lucaspoffo/renet.git"
-git = "https://github.com/Zajozor/renet.git"
-branch = "egui-0.23"
-features = ["bevy"]
+# [dependencies.bevy_renet]
+# # git = "https://github.com/lucaspoffo/renet.git"
+# git = "https://github.com/Zajozor/renet.git"
+# branch = "egui-0.23"
+# # version = "0.0.9"
+# features = ["serde"]
+
+# [dependencies.renet_visualizer]
+# # git = "https://github.com/lucaspoffo/renet.git"
+# git = "https://github.com/Zajozor/renet.git"
+# branch = "egui-0.23"
+# features = ["bevy"]
+
+# [dependencies.renet]
+# # git = "https://github.com/lucaspoffo/renet.git"
+# git = "https://github.com/Zajozor/renet.git"
+# branch = "egui-0.23"
 
 [dependencies.bevy_editor_pls]
 git = "https://github.com/jakobhellermann/bevy_editor_pls.git"
