--- a/bugged_replicon/Cargo.toml
+++ b/bugged_replicon/Cargo.toml
@@ -1,27 +1,11 @@
 [package]
-name = "creativity-game"
-default-run = "creativity-game"
+name = "creativity-game-bugged"
+default-run = "creativity-game-bugged"
 version = "0.0.0"
 edition = "2021"
 publish = false
 
 [workspace]
-members = ["xtask", "bevy_replicon", "bugged_replicon"]
-exclude = [
-	"surrealdb",
-	"noise-rs",
-	"bevy_editor_pls",
-	"bevy_hanabi",
-	"bevy_transform_gizmo",
-	"bevy_text_mesh",
-	"ggrs",
-	"bevy_rapier",
-	"bevy_ggrs_rapier_example",
-	"bevy_ggrs",
-	"bevy_ggrs_demo",
-	"renet",
-]
-
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 # Enable a small amount of optimization in debug mode
