--- a/bugged_replicon/Cargo.toml
+++ b/bugged_replicon/Cargo.toml
@@ -26,8 +26,6 @@ default = ["dev", "debugging", "desktop"]
 dev = [
 	"bevy/dynamic_linking",
 	"dep:bevy_editor_pls",
-	# "static_assertions/nightly",
-	# "bevy_rapier3d/simd-nightly"
 	"bevy_rapier3d/simd-stable",
 ]
 
@@ -41,15 +39,8 @@ debugging = ["dep:bevycheck"]
 
 [dependencies]
 bevy = "0.11.2"
-# bevy-debug-text-overlay = "6.0.0"
-bevy_dolly = "0.0.1"
-bevy_egui = "0.22.0"
-# bevy_ggrs = "0.13.0"
-# bevy_matchbox = { version = "0.7.0", features = [] }
 bevy_mod_picking = "0.16"
 bevy_rapier3d = "0.22.0"
-bevy_replicon = "0.16"
-# bevy_renet = "0.0.9"
 bevy_screen_diagnostics = "0.3.0"
 bevycheck = { version = "0.5.2", optional = true }
 clap = { version = "4.4.7", features = ["derive"] }
@@ -64,11 +55,9 @@ once_cell = "1.18.0"
 rand = "0.8.5"
 rand_derive = "0.5.0"
 renet = { version = "0.0.13", features = ["bevy"] }
-# bevy_editor_pls = "0.4.0"
 serde = { version = "1.0.188", features = ["derive"] }
 static_assertions = "1.1.0"
 strum = { version = "0.25.0", features = ["derive"] }
-# surrealdb = { version = "1.0.0" }
 tokio = { version = "1.32.0", features = ["full"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17", features = ["time"] }
@@ -79,27 +68,6 @@ optional = true
 default-features = false
 features = ["3d"]
 
-# [dependencies.surrealdb]
-# version = "1.0.0"
-
-# [dependencies.bevy_renet]
-# # git = "https://github.com/lucaspoffo/renet.git"
-# git = "https://github.com/Zajozor/renet.git"
-# branch = "egui-0.23"
-# # version = "0.0.9"
-# features = ["serde"]
-
-# [dependencies.renet_visualizer]
-# # git = "https://github.com/lucaspoffo/renet.git"
-# git = "https://github.com/Zajozor/renet.git"
-# branch = "egui-0.23"
-# features = ["bevy"]
-
-# [dependencies.renet]
-# # git = "https://github.com/lucaspoffo/renet.git"
-# git = "https://github.com/Zajozor/renet.git"
-# branch = "egui-0.23"
-
 [dependencies.bevy_editor_pls]
 # git = "https://github.com/jakobhellermann/bevy_editor_pls.git"
 # branch = "main"
@@ -107,6 +75,10 @@ optional = true
 features = ["default_windows"]
 version = "0.5"
 
+[dependencies.bevy_replicon]
+# version = "0.16"
+git = "https://github.com/lifescapegame/bevy_replicon.git"
+branch = "trace-replication"
 
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
