--- a/bugged_replicon/Cargo.toml
+++ b/bugged_replicon/Cargo.toml
@@ -45,6 +45,7 @@ bevycheck = { version = "0.5.2", optional = true }
 clap = { version = "4.4.7", features = ["derive"] }
 derive_builder = { version = "0.12.0", features = ["clippy"] }
 derive_more = "0.99.17"
+env_logger = "0.10.0"
 extension-traits = "1.0.1"
 lazy_static = "1.4.0"
 meshtext = "0.3.0"
