--- a/bugged_replicon/Cargo.toml
+++ b/bugged_replicon/Cargo.toml
@@ -42,6 +42,7 @@ bevy_mod_picking = "0.16"
 bevy_rapier3d = "0.22.0"
 bevy_screen_diagnostics = "0.3.0"
 bevycheck = { version = "0.5.2", optional = true }
+bincode = "1.3.3"
 clap = { version = "4.4.7", features = ["derive"] }
 derive_builder = { version = "0.12.0", features = ["clippy"] }
 derive_more = "0.99.17"
